[project]
name = "comfyui-apzmedia-naming-tools"
description = "A comprehensive set of naming tools for ComfyUI to build, sanitize, and manage file names and paths."
version = "1.6.5"
license = "MIT"
authors = [
    {name = "Pablo Apiolazza", email = "info@apzmedia.com"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["unidecode"]

[project.urls]
Repository = "https://github.com/APZmedia/ComfyUI-APZmedia-cleanName-from-string"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "APZmedia"
DisplayName = "APZmedia Naming Tools"
Icon = 
